fix: align page elements including properties, references, etc.

--- a/src/main/frontend/components/container.css
+++ b/src/main/frontend/components/container.css
@@ -670,10 +670,6 @@
     background: none;
   }
 
-  .references {
-    @apply mx-[28px];
-  }
-
   .sidebar-drop-indicator {
     @apply relative;
     height: 8px;
